# B42-webserv

./: CMakeLists.txt  For Meeting Monday :.md  Makefile  TO_DO  WORKING_ISSUES  basicserver.cpp  headers  out  test Config.conf  test.txt  test_parse_header  test_parse_headers  test_parse_method  test_parse_version  test_request_with_config  testmain.cpp  webserv
Config/: Config.cpp  Config.hpp  Route.cpp  Route.hpp  config.conf  config_parser  main.cpp  main.txt  new_parser
Config_copy/: Config.cpp  Config.hpp  Route.cpp  Server.cpp  Server.hpp  main.cpp
HTTP_Server/: http_requests.cpp  http_responses.cpp  http_server  http_server.cpp  main.cpp  server.cpp
_notes/: ABNF.txt  For Meeting Monday :.md  Overall To Do  body.md  chatGPTlinks
_subjectFIles/: webservSplit.txt
backup/: Makefile  Request  Response
config/: default.conf
damianServer/: Building Response.c  Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.hpp  Route.cpp  Route.hpp  RouteValidation.cpp  config.conf  main  pseudoPath
damienServer/: Config.hpp  ConfigParser.cpp  Route.cpp  Route.hpp  config.conf  main.cpp
include/: CGIClient.hpp  Client.hpp  ConfigBase.hpp  HTTPRequest.hpp  HTTPResponse.hpp  Location.hpp  Server.hpp  colors.hpp  default.hpp  methods.hpp  parse.hpp  parse.tpp  process_requests.hpp  signals.hpp  validate_requests.hpp
includes/: ContentHandler.hpp  Entries.hpp  EntryObserver.hpp  Error.hpp  HtmlGenerator.hpp  HtmlHandler.hpp  Log.hpp  Logs.hpp  Reqeust.hpp  Request.hpp  Response.hpp  ResponseState.hpp  ServerRequest.hpp  SimpleResponse.hpp  StatusEntry.hpp  (+6 more)
(+83 files in other folders)
